refactor: change aggregated word endpoint and doc
