# src/resources/aggregatedWords/aggregatedWord.router.js
@@ -9,17 +9,23 @@ const extractQueryParam = require('../../utils/getQueryNumberParameter');
 
 router.get('/', async (req, res) => {
   const perPage = extractQueryParam(req.query.wordsPerPage, 10);
+  const group = extractQueryParam(req.query.group, 0);
 
-  if (isNaN(perPage)) {
+  if (isNaN(group) || isNaN(perPage)) {
     throw new BAD_REQUEST_ERROR(
-      'Wrong query parameters: the words-per-page number should be a valid integer'
+      'Wrong query parameters: the group and words-per-page number should be valid integers'
     );
   }
 
+  const filter = req.query.filter ? JSON.parse(req.query.filter) : null;
+  const onlyUserWords = req.query.onlyUserWords.toLowerCase() === 'true';
+
   const words = await aggregatedWordsService.getAll(
     req.userId,
+    group,
     perPage,
-    JSON.parse(req.query.filter)
+    filter,
+    onlyUserWords
   );
   res.status(OK).send(words);
 });
